--- a/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
@@ -31,16 +31,15 @@
             </tr>
         </thead>
         <tbody>
-            <?php foreach ($this->listFuncionarios as $funcionarios): ?>
+            <?php foreach ($this->vacinas as $vacinas): ?>
                 <tr>
-                    <td><?php echo $funcionarios->cod_pessoa ?></td>
-                    <td><?php echo $funcionarios->nome ?></td>
-                    <td><?php echo $funcionarios->nome ?></td>
-                    <td><?php echo $funcionarios->matricula ?></td>
-                    <td><?php echo $funcionarios->cod_status == 1 ? 'Ativo' : 'Inativo' ?></td>
+                    <td><?php echo $vacinas->cod_vac ?></td>
+                    <td><?php echo $vacinas->nome_vac ?></td>
+                    <td><?php echo $vacinas->dt_fabric ?></td>
+                    <td><?php echo $vacinas->dt_venc ?></td>
                     <td>
-                        <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar" class="btn btn-primary btn btn-mini"><i class="icon-pencil icon-white"></i></a>
-                        <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                        <a href="/admin/vacina/alterar/cod_vacina/<?php echo $vacinas->cod_vac ?>" title="Alterar" class="btn btn-primary btn btn-mini"><i class="icon-pencil icon-white"></i></a>
+                        <a href="/admin/vacina/excluir/cod_vacina/<?php echo $vacinas->cod_vac ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
                     </td>
                 </tr>
             <?php endforeach; ?>
