Conclusão alterar vacina.

--- a/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
@@ -1,5 +1,5 @@
 <fieldset>
-    <legend>Cadastrar Vacinas</legend>
+    <legend>Alterar Vacina</legend>
     <?php
     if ($this->mensagem):
         ?>
@@ -59,6 +59,9 @@
                                 </div>
                             </div>
                         </div>
+                        <?php echo $this->form->Vacina->cod_vacina ?>
+                        <?php echo $this->form->Lote->cod_lote ?>
+                        <?php echo $this->form->Vacina->Fabricante->cod_fabric ?>
                         <div class="rows-fluid">
                             <div class="span12">
                                 <div class="form-actions">
