--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -994,11 +994,12 @@
         <script src="/administrator/js/flot/jquery.flot.categories.js"></script>
         <script src="/administrator/js/wysihtml5/wysihtml5-0.3.0.js"></script>
         <script src="/administrator/js/wysihtml5/bootstrap-wysihtml5.js"></script>
-        <script src="/administrator/js/calendar/fullcalendar.js"></script> <!-- this plugin required jquery ui-->
+        <!--<script src="/administrator/js/calendar/fullcalendar.js"></script>  this plugin required jquery ui-->
         <script src="/administrator/js/pessoa.js"></script> <!-- this plugin required jquery ui-->
         <script src="/assets/js/confirm-action.js"></script> <!-- this plugin required jquery ui-->
         <script src="/assets/js/fale-conosco.js"></script> <!-- this plugin required jquery ui-->
-
+        <script type="text/javascript" src="/assets/js/utils.js"></script>
+        
         <!-- required stilearn template js, for full feature-->
         <script src="/administrator/js/holder.js"></script>
         <script src="/administrator/js/stilearn-base.js"></script>
