Atualização para envio.

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -986,6 +986,7 @@
         <script src="/administrator/js/widgets.js"></script>
         <script src="/administrator/js/peity/jquery.peity.js"></script>
         <script src="/administrator/js/datepicker/bootstrap-datepicker.js"></script>
+        <script src="/assets/js/jquery-mask.js"></script>
 
         <script src="/administrator/js/select2/select2.js"></script>
         <script src="/administrator/js/knob/jquery.knob.js"></script>
