--- a/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
@@ -21,7 +21,7 @@
                                 <div class="control-group">
                                     <label for="inputEmail" class="control-label">Nome da Vacina:</label>
                                     <div class="controls">
-                                        <?php echo $this->form->Vacina->nome_vac ?>
+                                        <?php echo $this->form->Vacina->nome_vacina ?>
                                     </div>
                                 </div>
                                 <label for="inputEmail" class="control-label">Lote da Vacina:</label>
