--- a/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
@@ -33,13 +33,13 @@
         <tbody>
             <?php foreach ($this->vacinas as $vacinas): ?>
                 <tr>
-                    <td><?php echo $vacinas->cod_vac ?></td>
-                    <td><?php echo $vacinas->nome_vac ?></td>
+                    <td><?php echo $vacinas->cod_vacina ?></td>
+                    <td><?php echo $vacinas->nome_vacina ?></td>
                     <td><?php echo $vacinas->dt_fabric ?></td>
                     <td><?php echo $vacinas->dt_venc ?></td>
                     <td>
-                        <a href="/admin/vacina/alterar-vacina/cod_vacina/<?php echo $vacinas->cod_vac ?>" title="Alterar" class="btn btn-primary btn btn-mini"><i class="icon-pencil icon-white"></i></a>
-                        <a href="/admin/vacina/excluir-vacina/cod_vacina/<?php echo $vacinas->cod_vac ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                        <a href="/admin/vacina/alterar-vacina/cod_vacina/<?php echo $vacinas->cod_vacina ?>" title="Alterar" class="btn btn-primary btn btn-mini"><i class="icon-pencil icon-white"></i></a>
+                        <a href="/admin/vacina/excluir-vacina/cod_vacina/<?php echo $vacinas->cod_vacina ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
                     </td>
                 </tr>
             <?php endforeach; ?>
