--- a/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
@@ -63,6 +63,7 @@
                         <?php echo $this->form->cod_lote_vacina ?>
                         <?php echo $this->form->Lote->cod_lote ?>
                         <?php echo $this->form->Vacina->Fabricante->cod_fabric ?>
+                        <?php echo $this->form->Vacina->VacinaFabricante->cod_vacina_fabricante ?>
                         <div class="rows-fluid">
                             <div class="span12">
                                 <div class="form-actions">
