--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
+<?php echo $this->flashMessenger() ?>
 <fieldset>
     <legend>Alterar Paciente</legend>
     <div style="margin-bottom: 18px;" class="tabbable">
