--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -1,5 +1,9 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
-<?php echo $this->modal ?>
+<?php
+echo $this->modal;
+echo $this->flashMessenger();
+?>
+
 <fieldset>
     <legend>Consultar Funcionário</legend>
 
@@ -19,8 +23,9 @@
     <!--ABAIXO APARECERÁ A LISTA COM OS RESULTADOS DA CONSULTA-->
 
     <!--PAGINAÇÃO DAS TABELAS DA PESQUISA-->
-
+<?php if(count($this->listFuncionarios) > 0): ?>
     <table class="table table-bordered table-striped"  style="font-size: 13px;">
+        <div class="alert alert-info">Resultado(s) da(s) consulta(s) para: <strong><?php echo $this->request['search'] ?></strong></div>
         <thead style="background-color: #08c; color: #FFFFFF">
             <tr>
                 <th>Código</th>
@@ -60,4 +65,5 @@
             <li><a href="#">Proximo</a></li>
         </ul>
     </div>
+    <?php endif; ?>
 </fieldset>
