--- a/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
@@ -1,12 +1,6 @@
 <fieldset>
     <legend>Cadastrar Unidade de Saúde</legend>
-    <?php
-    if ($this->mensagem):
-        ?>
-        <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
-        <?php
-    endif;
-    ?>
+    <?php echo $this->flashMessenger() ?>
 
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
