Concluida paginação de unidades de saude.

--- a/application/modules/admin/views/scripts/unidade/consulta-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/consulta-unidade.phtml
@@ -46,14 +46,9 @@
         <div class="pagination pagination-centered">
             <ul>
                 <!--TABELA COM OS DADOS DA PESQUISA-->
-                <li><a href="#">Anterior</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">Proximo</a></li>
+                <li><a href="<?php echo $this->pagination->previous ?>">Anterior</a></li>
+                <?php echo $this->pagination->pages ?>
+                <li><a href="<?php echo $this->pagination->next ?>">Proximo</a></li>
             </ul>
         </div>
     <?php endif; ?>
