Correções pedidas pelo gestor (Rossete)

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -181,10 +181,10 @@
                                                 <img class="img-circle" src="/administrator/img/user.jpg" title="profile" alt="profile" />
                                             </a>
                                             <div class="media-body description">
-                                                <p><strong>John Does</strong></p>
-                                                <p class="muted">johndoe@mail.com</p>
+                                                <p><strong></strong></p>
+                                                <p class="muted"><?php echo $identity->nome_login ?></p>
                                                 <p class="action">Status - Ativo</p>
-                                                <a href="/admin/perfil" class="btn btn-primary btn-small btn-block">Ver Perfil</a>
+                                                <!--<a href="/admin/perfil/editar" class="btn btn-primary btn-small btn-block">Ver Perfil</a>-->
                                             </div>
                                         </div>
                                     </li>
